# openfootmanager-mobile

./: .vercelignore  Cargo.toml  README_PWA.md  build-wasm.sh  index.html  package.json  vite.config.ts
.github/workflows/: .gitignore  build-wasm.sh  build-wasm.yml
openfootmanager-develop/openfootmanager-develop/: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json
openfootmanager-develop/openfootmanager-develop/src-tauri/: Cargo.toml
openfootmanager-develop/openfootmanager-develop/src-tauri/crates/db/: Cargo.toml
openfootmanager-develop/openfootmanager-develop/src-tauri/crates/db/src/: game_persistence.rs
openfootmanager-develop/openfootmanager-develop/src-tauri/crates/db/src/repositories/: meta_repo.rs  news_repo.rs  team_repo.rs
openfootmanager-develop/openfootmanager-develop/src-tauri/crates/db/src/sql/: v024_transfer_rumours.sql  v025_player_retired.sql  v026_world_history_archive.sql  v027_available_staff_market_activity.sql  v028_entity_media.sql
openfootmanager-develop/openfootmanager-develop/src-tauri/crates/domain/src/: lib.rs  manager.rs
openfootmanager-develop/openfootmanager-develop/src-tauri/crates/engine/: Cargo.toml
openfootmanager-develop/openfootmanager-develop/src-tauri/crates/engine/src/: event.rs
openfootmanager-develop/openfootmanager-develop/src-tauri/crates/engine/src/live_match/: helpers.rs  penalty.rs
openfootmanager-develop/openfootmanager-develop/src-tauri/crates/ofm_core/src/: firing.rs  news.rs  player_rating.rs  season_awards.rs  state.rs  training.rs  transfers.rs
openfootmanager-develop/openfootmanager-develop/src-tauri/crates/ofm_core/src/generator/: generation.rs  world_io.rs
openfootmanager-develop/openfootmanager-develop/src-tauri/crates/ofm_core/src/random_events/: builders_reports.rs  mod.rs
openfootmanager-develop/openfootmanager-develop/src-tauri/crates/ofm_core/src/turn/: news.rs
openfootmanager-develop/openfootmanager-develop/src-tauri/crates/ofm_core/tests/: player_events_tests.rs  player_rating_tests.rs  turn_tests.rs
openfootmanager-develop/openfootmanager-develop/src-tauri/src/: lib.rs
openfootmanager-develop/openfootmanager-develop/src-tauri/src/application/: live_match.rs
openfootmanager-develop/openfootmanager-develop/src-tauri/src/commands/: club.rs  contracts.rs  finances.rs  game.rs  live_match.rs  profiles.rs  settings.rs  staff.rs  transfers.rs
openfootmanager-develop/openfootmanager-develop/src-tauri/src/mcp_server/: config.rs  formatting.rs  server.rs
openfootmanager-develop/openfootmanager-develop/src-tauri/src/mcp_server/tools_impl/: club.rs  game.rs  inbox.rs  info.rs  mod.rs  scouting.rs  season.rs
public/wasm/: .gitkeep
public/worlds/: index.json
src/: App.css  main.tsx  mobile.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/ofm_core/: Cargo.toml
src-tauri/crates/ofm_core/src/: aging.rs  ai_hiring.rs  contract_wage_policy.rs  contracts.rs  currency.rs  end_of_season.rs  finances.rs  football_identity.rs  game.rs  history_generation.rs  job_offers.rs  lib.rs  messages.rs  season_context.rs
src-tauri/crates/ofm_core/src/generator/: definitions.rs  mod.rs
src-tauri/crates/ofm_core/src/player_events/: message_builders.rs  responses.rs
src-tauri/crates/ofm_core/src/random_events/: message_builders.rs  responses.rs
src-tauri/crates/ofm_core/src/turn/: mod.rs
src-tauri/crates/ofm_core/tests/: contracts_tests.rs  end_of_season_tests.rs  finances_tests.rs  live_match_manager_tests.rs  random_events_tests.rs  scenario_tests.rs  scouting_tests.rs
src-tauri/databases/: README.md
src/bridge/: invoke.ts  noop.ts  wasmLoader.ts
src/components/: EndOfSeasonScreen.test.tsx  EndOfSeasonScreen.tsx  NextMatchDisplay.tsx  SwitchClubConfirmModal.tsx  TraitBadge.tsx
src/hooks/: useAdvanceTime.test.tsx
src/i18n/: frontendKeyCoverage.test.ts  i18nTestHelpers.ts  index.ts  localeCoverage.test.ts
src/lib/: countries.test.ts  dateFormatting.ts  helpers.test.ts  helpers.ts  valueFormatting.ts
src/pages/: Dashboard.tsx  MainMenu.test.tsx  MainMenu.tsx  MatchSimulation.test.tsx  (+3 more)
src/wasm/ofm_engine_wasm/: Cargo.toml
src/wasm/ofm_engine_wasm/src/: lib.rs
(+228 files in other folders)
