[package]
name = "ofm_core"
version = "0.2.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
log = "0.4"
domain = { version = "0.2.1", path = "../domain" }
engine = { version = "0.2.1", path = "../engine" }
rand = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.21.0", features = ["v4"] }
