[package]
name = "ofm_engine_wasm"
version = "0.2.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen     = "0.2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
# getrandom con wasm_js es necesario para rand en WASM
getrandom        = { version = "0.3", features = ["wasm_js"] }
# chrono con wasmbind para Date.now() en el browser
chrono           = { version = "0.4", features = ["serde", "wasmbind"] }
log              = "0.4"
console_log      = "1"

# Reutilizamos los crates puros de Rust sin modificar
domain   = { path = "../../../../src-tauri/crates/domain" }
ofm_core = { path = "../../../../src-tauri/crates/ofm_core" }
engine   = { path = "../../../../src-tauri/crates/engine" }
# NOTA: el crate "db" (SQLite) es omitido intencionalmente.
#       La persistencia la maneja IndexedDB en el lado JS.

[profile.release]
opt-level = "s"  # Optimizar por tamaño (importante para WASM)
lto = true
