[package]
name = "ofm_engine_wasm"
version = "0.2.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen     = "0.2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
log              = "0.4"
console_log      = "1"

# Dependencias de los crates internos
domain   = { path = "../../../src-tauri/crates/domain" }
ofm_core = { path = "../../../src-tauri/crates/ofm_core" }
engine   = { path = "../../../src-tauri/crates/engine" }

# Parches para compatibilidad WASM en dependencias transitivas
getrandom = { version = "0.3", features = ["wasm_js"] }
chrono    = { version = "0.4", features = ["serde", "wasmbind"] }
rand      = { version = "0.10", features = ["small_rng"] }
uuid      = { version = "1.21.0", features = ["v4", "js"] }

[profile.release]
opt-level = "s"
lto = true
